[package]
name = "healthgo-concurrent-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"
